--- a/templates/product.html
+++ b/templates/product.html
@@ -18,7 +18,7 @@
   <li class="list-group-item active">Reviews</li>
   <li class="list-group-item justify-content-between" ng-repeat="review in product.reviews">
     <span><strong class="mr-2">{{review.reviewer }} </strong>{{review.review}}</span>
-    <span class="badge badge-default badge-pill pull-right">{{review.rate}}</span>
+    <span star-rating class=" pull-right" ng-model="review.rate"></span>
 
   </li>
 </ul>
